--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "bootstrap": "^5.0.0-beta2",
     "css-loader": "^5.1.1",
+    "file-loader": "^6.2.0",
     "html-loader": "^2.1.1",
     "html-webpack-plugin": "^5.3.0",
     "postcss": "^8.2.8",
